fix: place the attribution to the left on desktops to prevent any overlap

--- a/src/components/styles/Attribution.module.scss
+++ b/src/components/styles/Attribution.module.scss
@@ -10,10 +10,12 @@
     }
 
     @media only screen and (min-width: 50em) {
-        position: fixed;
-        width   : 100%;
-        bottom  : 1rem;
-        left    : 0;
+        font-size : 1rem;
+        position  : fixed;
+        text-align: start;
+        width     : 16rem;
+        bottom    : 1rem;
+        left      : 1rem;
 
         a {
             position: relative;
